[package]
name = "chesc"
version = "0.1.0"
authors = ["Garnet3106 <manage@gant.work>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
fcpeg = { path = "../../FunCobal-family/fcpeg/impl/rust/fcpeg" }
rustnutc = { path = "../rustnutc" }
cons-util = { path = "../cons-util" }
